--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ install_deploysuite: &install_deploysuite
     cp ./../buildscript/master_deploy.sh .
     cp ./../buildscript/buildenv.sh .
     cp ./../buildscript/awsconfiguration.sh .
+    cp ./../buildscript/psvar-processor.sh .
 
 restore_cache_settings_for_build: &restore_cache_settings_for_build
   key: docker-node-modules-{{ checksum "yarn.lock" }}
@@ -43,9 +44,9 @@ builddeploy_steps: &builddeploy_steps
     command: |
       ./awsconfiguration.sh $DEPLOY_ENV
       source awsenvconf
-      ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-${APPNAME}-deployvar
-      source buildenvvar
-      ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -s ${LOGICAL_ENV}-global-appvar,${LOGICAL_ENV}-${APPNAME}-appvar -i ${APPNAME} -p FARGATE
+      ./psvar-processor.sh -t appenv -p /config/${APPNAME}/deployvar
+      source deployvar_env
+      ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -j /config/common/global-appvar,/config/${APPNAME}/appvar -i ${APPNAME} -p FARGATE
 jobs:
   # Build & Deploy against development backend
   "build-dev":
@@ -53,7 +54,7 @@ jobs:
     environment:
       DEPLOY_ENV: "DEV"
       LOGICAL_ENV: "dev"
-      APPNAME: "challenge-api"
+      APPNAME: "challenge-api-v6"
       CODEARTIFACT_ENV: "PROD"
     steps: *builddeploy_steps
 
@@ -62,7 +63,7 @@ jobs:
     environment:
       DEPLOY_ENV: "QA"
       LOGICAL_ENV: "qa"
-      APPNAME: "challenge-api"
+      APPNAME: "challenge-api-v6"
       CODEARTIFACT_ENV: "PROD"
     steps: *builddeploy_steps
 
@@ -71,7 +72,7 @@ jobs:
     environment:
       DEPLOY_ENV: "PROD"
       LOGICAL_ENV: "prod"
-      APPNAME: "challenge-api"
+      APPNAME: "challenge-api-v6"
       CODEARTIFACT_ENV: "PROD"
     steps: *builddeploy_steps
 
