--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  challenge-api:
-    image: challenge-api:latest
+  challenge-api-v6:
+    image: challenge-api-v6:latest
     build:
       context: ../
       dockerfile: docker/Dockerfile
