--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,12 @@ save_cache_settings: &save_cache_settings
   paths:
   - node_modules
 
+finger_print_add: &finger_print_add
+    fingerprints:
+            - "62:fd:e9:40:a3:5f:8d:c7:55:36:f2:76:59:78:6e:f0"
+
 builddeploy_steps: &builddeploy_steps
+- add_ssh_keys: *finger_print_add 
 - checkout
 - setup_remote_docker
 - run: *install_dependency
