--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,7 @@
 # Use the base image with Node.js
 FROM node:18.14.1-alpine3.17
-RUN apk add --no-cache git
-RUN apk add --update --no-cache openssh
-
+RUN apk add --update --no-cache openssh-client git
+RUN mkdir -p -m 0600 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
 # Copy the current directory into the Docker image
 COPY . /challenge-api
 
