--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,12 @@ save_cache_settings: &save_cache_settings
   paths:
   - node_modules
 
+finger_print_add: &finger_print_add
+    fingerprints:
+            - SHA256:KJYSvQh9CxkY9yRXxp+Geo6cllnfSiiKAH3LFQ/X9f4
+
 builddeploy_steps: &builddeploy_steps
+- add_ssh_keys: *finger_print_add 
 - checkout
 - setup_remote_docker
 - run: *install_dependency
