--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,15 @@ builddeploy_steps: &builddeploy_steps
       aws codeartifact login --tool npm --repository topcoder-framework --domain topcoder --domain-owner $AWS_ACCOUNT_ID --region $AWS_REGION --namespace @topcoder-framework
       cp ~/.npmrc .
       rm -f awsenvconf
-      ./build.sh ${APPNAME}
+- run:
+    name: "Build docker image"
+    command: |
+      ./awsconfiguration.sh ${DEPLOY_ENV}
+      source awsenvconf
+      ./psvar-processor.sh -t appenv -p /config/${APPNAME}/buildvar
+      source buildvar_env
+      rm -f awsenvconf
+      ./build.sh ${APPNAME}     
 - save_cache: *save_cache_settings
 - deploy:
     name: Running MasterScript.
