Remove key and secret

--- a/docs/dev.env
+++ b/docs/dev.env
@@ -1,5 +1,5 @@
-AUTH0_CLIENT_ID=8QovDh27SrDuXSs68m21A1NBP8isvOt
-AUTH0_CLIENT_SECRET=3QVxxu20QnagdH-McWhVz0WfsQzA1F8taDdGDI4XphgpEYZPcMTF4lX3aeOIeCzh
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
 AUTH0_URL=https://topcoder-dev.auth0.com/oauth/token
 AUTH0_AUDIENCE=https://m2m.topcoder-dev.com/
 DATABASE_URL="postgresql://topcoder:NUDvFEZzrey2x2og2!zn_kBzcaJ.fu_njAJcD*z2q@topcoder-services.ci8xwsszszsw.us-east-1.rds.amazonaws.com:5432/topcoder-services?schema=challenges"
