--- a/data-migration/package.json
+++ b/data-migration/package.json
@@ -18,7 +18,7 @@
         "lint:fix": "eslint . --fix"
     },
     "dependencies": {
-        "@prisma/client": "^6.0.0",
+        "@prisma/client": "~6.8.2",
         "dotenv": "^16.0.3",
         "event-stream": "^4.0.1",
         "JSONStream": "^1.3.5",
@@ -30,7 +30,7 @@
         "eslint-plugin-jest": "^28.11.0",
         "globals": "^16.0.0",
         "jest": "^29.5.0",
-        "prisma": "^6.0.0"
+        "prisma": "~6.8.2"
     },
     "volta": {
         "node": "18.19.0",
