--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start:dev": "nodemon app.js",
     "postinstall": "npx prisma generate",
     "lint": "prettier src/**/*.js",
     "lint:fix": "prettier --write src/**/*.js",
