Node version updates

--- a/package.json
+++ b/package.json
@@ -83,10 +83,11 @@
     ]
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x",
+    "pnpm": "10.15.x"
   },
   "volta": {
-    "node": "18.12.1",
-    "yarn": "1.22.19"
+    "node": "20.x",
+    "pnpm": "10.15.x"
   }
 }
