--- a/package.json
+++ b/package.json
@@ -83,11 +83,9 @@
     ]
   },
   "engines": {
-    "node": "20.x",
-    "pnpm": "10.15.x"
+    "node": "22.x"
   },
   "volta": {
-    "node": "20.x",
-    "pnpm": "10.15.x"
+    "node": "22.x"
   }
 }
