Implement the 'are all reviews completed' check

--- a/docs/dev.env
+++ b/docs/dev.env
@@ -3,5 +3,6 @@ AUTH0_CLIENT_SECRET=
 AUTH0_URL=https://topcoder-dev.auth0.com/oauth/token
 AUTH0_AUDIENCE=https://m2m.topcoder-dev.com/
 DATABASE_URL="postgresql://topcoder:NUDvFEZzrey2x2og2!zn_kBzcaJ.fu_njAJcD*z2q@topcoder-services.ci8xwsszszsw.us-east-1.rds.amazonaws.com:5432/topcoder-services?schema=challenges"
+REVIEW_DB_URL=
 # Optional: override registrant resource role ID (defaults to SUBMITTER_ROLE_ID)
 # REGISTRANT_ROLE_ID=
