--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "create-tables": "npx prisma migrate dev",
     "seed-tables": "node src/scripts/seed-tables.js",
     "check-timeline-templates": "node src/scripts/check-templates.js",
-    "test": "NODE_ENV=test mocha test/unit/*.test.js --exit",
+    "test": "NODE_ENV=test mocha \"test/unit/**/*.test.js\" --exit",
     "e2e": "mocha test/e2e/*.test.js --exit",
     "test:cov": "nyc --reporter=html --reporter=text npm test",
     "e2e:cov": "nyc --reporter=html --reporter=text npm run e2e",
