Deploy PM-2325-reviewers-order branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ workflows:
             - feature/top-262-projectid-non-mandatory
             - TOP-2364
             - PM-2097
+            - pm-2325-reviewers-order
 
     - "build-qa":
         context: org-global
