--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 # Use the base image with Node.js
 FROM node:22.19-alpine
+RUN apk add --update --no-cache openssh-client git
 # Copy the current directory into the Docker image
 COPY . /challenge-api
 
