--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "e2e:cov": "nyc --reporter=html --reporter=text npm run e2e",
     "services:up": "docker-compose -f ./local/docker-compose.yml up -d",
     "services:down": "docker-compose -f ./local/docker-compose.yml down",
-    "services:logs": "docker-compose -f ./local/docker-compose.yml logs",
-    "local:init": "npm run local:reset && npm run seed-tables",
-    "local:reset": "npx prisma migrate reset --force"
+    "services:logs": "docker-compose -f ./local/docker-compose.yml logs"
   },
   "author": "TCSCODER",
   "license": "MIT",
