--- a/package.json
+++ b/package.json
@@ -27,49 +27,49 @@
   "repository": "https://github.com/topcoder-platform/challenge-api",
   "devDependencies": {
     "aws-sdk-mock": "^6.2.1",
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
-    "mocha": "^11.1.0",
+    "chai": "^6.2.0",
+    "chai-http": "^5.1.2",
+    "mocha": "^11.7.4",
     "mocha-prepare": "^0.1.0",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "nyc": "^17.1.0",
-    "prettier": "^2.8.1",
-    "prisma": "^6.4.1",
-    "standard": "^17.1.0"
+    "prettier": "^3.6.2",
+    "prisma": "^6.18.0",
+    "standard": "^17.1.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
-    "aws-sdk": "^2.1145.0",
-    "axios": "^1.10.0",
-    "axios-retry": "^3.4.0",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.15.1",
-    "compare-versions": "^6.1.0",
-    "config": "^3.0.1",
+    "@prisma/client": "^6.18.0",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.13.1",
+    "axios-retry": "^4.5.0",
+    "bluebird": "^3.7.2",
+    "body-parser": "^2.2.0",
+    "compare-versions": "^6.1.1",
+    "config": "^4.1.1",
     "cors": "^2.8.5",
-    "decimal.js": "^10.4.3",
-    "deep-equal": "^2.2.0",
-    "dompurify": "^3.0.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.15.4",
-    "express-fileupload": "^1.1.6",
+    "decimal.js": "^10.6.0",
+    "deep-equal": "^2.2.3",
+    "dompurify": "^3.3.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "express-interceptor": "^1.2.0",
     "get-parameter-names": "^0.3.0",
-    "http-status-codes": "^1.3.0",
-    "joi": "^14.0.0",
-    "jsdom": "^21.1.2",
+    "http-status-codes": "^2.3.0",
+    "joi": "^18.0.1",
+    "jsdom": "^27.1.0",
     "json-rules-engine": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.19",
-    "markdown-it": "^13.0.1",
-    "moment": "^2.24.0",
+    "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
+    "moment": "^2.30.1",
     "node-cache": "^5.1.2",
-    "swagger-ui-express": "^4.1.3",
-    "tc-core-library-js": "appirio-tech/tc-core-library-js.git#v2.6.4",
-    "topcoder-bus-api-wrapper": "topcoder-platform/tc-bus-api-wrapper.git",
-    "uuid": "^3.3.2",
-    "winston": "^3.8.2",
-    "xss": "^1.0.8",
+    "swagger-ui-express": "^5.0.1",
+    "tc-core-library-js": "github:appirio-tech/tc-core-library-js#v2.6.4",
+    "topcoder-bus-api-wrapper": "github:topcoder-platform/tc-bus-api-wrapper",
+    "uuid": "^13.0.0",
+    "winston": "^3.18.3",
+    "xss": "^1.0.15",
     "yamljs": "^0.3.0"
   },
   "standard": {
