--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "repository": "https://github.com/topcoder-platform/challenge-api",
   "devDependencies": {
-    "aws-sdk-mock": "^6.2.1",
+    "aws-sdk-client-mock": "^4.1.0",
     "chai": "^6.2.0",
     "chai-http": "^5.1.2",
     "mocha": "^11.7.4",
@@ -38,8 +38,8 @@
     "standard": "^17.1.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.716.0",
     "@prisma/client": "^6.18.0",
-    "aws-sdk": "^2.1692.0",
     "axios": "^1.13.1",
     "axios-retry": "^4.5.0",
     "bluebird": "^3.7.2",
@@ -63,7 +63,7 @@
     "swagger-ui-express": "^5.0.1",
     "tc-core-library-js": "github:appirio-tech/tc-core-library-js#v2.6.4",
     "topcoder-bus-api-wrapper": "github:topcoder-platform/tc-bus-api-wrapper",
-    "uuid": "^13.0.0",
+    "uuid": "^11.0.3",
     "winston": "^3.18.3",
     "xss": "^1.0.15",
     "yamljs": "^0.3.0"
