--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "create-tables": "npx prisma migrate dev",
     "seed-tables": "node src/scripts/seed-tables.js",
     "check-timeline-templates": "node src/scripts/check-templates.js",
+    "update-topgear-challenge-phases": "node src/scripts/update-topgear-challenge-phases.js",
     "test": "NODE_ENV=test mocha \"test/unit/**/*.test.js\" --exit",
     "e2e": "mocha test/e2e/*.test.js --exit",
     "test:cov": "nyc --reporter=html --reporter=text npm test",
