--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
     "moment": "^2.30.1",
     "node-cache": "^5.1.2",
     "swagger-ui-express": "^5.0.1",
-    "tc-core-library-js": "github:appirio-tech/tc-core-library-js#master",
-    "topcoder-bus-api-wrapper": "github:topcoder-platform/tc-bus-api-wrapper#develop",
+    "tc-core-library-js": "github:topcoder-platform/tc-core-library-js#master",
+    "topcoder-bus-api-wrapper": "github:topcoder-platform/tc-bus-api-wrapper#master",
     "uuid": "^11.0.3",
     "winston": "^3.18.3",
     "xss": "^1.0.15",
